opam-version: "1.2"
version: "0.1"
maintainer: "you@example.com"
homepage: "https://github.com/your-org/project-name"
dev-repo: "https://github.com/your-org/project-name.git"
bug-reports: "https://github.com/your-org/project-name/issues"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: [
  "ppx_jane" {build}
  "bisect_ppx" {build & >= "1.3.1"}
  "jbuilder" {build & >= "1.0+beta18"}

  "ounit" {test}
]

available: [ocaml-version >= "4.05.0"]
